--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lingua-franca-building",
-  "version": "0.2.12",
+  "name": "lingua-franca",
+  "version": "0.5.0",
   "description": "package for building up 'AST's'",
   "main": "dist/src/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
   "prepublish": "tsc",
   "repository": {
     "type": "git",
-    "url": "https://github.com/corno/lingua-franca-building.git"
+    "url": "https://github.com/corno/lingua-franca.git"
   },
   "files": [
     "dist/*"
